--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,18 @@ async-timeout==4.0.2
 attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
+blis==0.7.9
 cachetools==5.3.0
+catalogue==2.0.8
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+confection==0.0.4
+cymem==2.0.7
 datasets==2.9.0
 decorator==5.1.1
 dill==0.3.6
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 evaluate==0.4.0
 executing==1.2.0
 filelock==3.9.0
@@ -32,14 +37,17 @@ idna==3.4
 importlib-metadata==6.0.0
 ipython==8.9.0
 jedi==0.18.2
+Jinja2==3.1.2
 joblib==1.2.0
 keras==2.11.0
+langcodes==3.3.0
 libclang==15.0.6.1
 Markdown==3.4.1
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 multidict==6.0.4
 multiprocess==0.70.14
+murmurhash==1.0.9
 nltk==3.8.1
 numpy==1.24.1
 oauthlib==3.2.2
@@ -47,8 +55,10 @@ opt-einsum==3.3.0
 packaging==23.0
 pandas==1.5.3
 parso==0.8.3
+pathy==0.10.1
 pexpect==4.8.0
 pickleshare==0.7.5
+preshed==3.0.8
 prompt-toolkit==3.0.36
 protobuf==3.19.6
 ptyprocess==0.7.0
@@ -56,6 +66,7 @@ pure-eval==0.2.2
 pyarrow==11.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pydantic==1.10.5
 Pygments==2.14.0
 python-dateutil==2.8.2
 pytz==2022.7.1
@@ -69,7 +80,12 @@ scikit-learn==1.2.1
 scipy==1.10.0
 sentencepiece==0.1.97
 six==1.16.0
+smart-open==6.3.0
 soupsieve==2.3.2.post1
+spacy==3.5.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.5
 stack-data==0.6.2
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
@@ -77,14 +93,17 @@ tensorboard-plugin-wit==1.8.1
 tensorflow-estimator==2.11.0
 tensorflow-macos==2.11.0
 termcolor==2.2.0
+thinc==8.1.7
 threadpoolctl==3.1.0
 tokenizers==0.13.2
 torch==1.13.1
 tqdm==4.64.1
 traitlets==5.9.0
 transformers==4.26.0
+typer==0.7.0
 typing_extensions==4.4.0
 urllib3==1.26.14
+wasabi==1.1.1
 wcwidth==0.2.6
 Werkzeug==2.2.2
 wrapt==1.14.1
